Defer common_footer js

--- a/app/views/shared/_footer_scripts.html.erb
+++ b/app/views/shared/_footer_scripts.html.erb
@@ -1,5 +1,5 @@
 <%= javascript_include_tag "vendor/modernizr" %>
-<%= javascript_include_tag "common_footer" %>
+<%= javascript_include_tag "common_footer", defer: true %>
 
 <%= yield :support_chat_javascript %>
 
