Admin utility to flush cache

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -315,6 +315,7 @@
                     <% if can? :manage, BadActorLog %>
                       <li><%= link_to "Bad Actor Log", admin_bad_actor_logs_path %></li>
                     <% end %>
+                    <li><%= link_to "Utilities", admin_utilities_path %></li>
                   </ul>
                   </li>
                 <% end %>
