--- a/app/views/bss/layouts/application.html.erb
+++ b/app/views/bss/layouts/application.html.erb
@@ -58,6 +58,7 @@
 		<link rel="preconnect" href=https://fonts.googleapis.com>
 		<link rel="preconnect" href=https://fonts.gstatic.com crossorigin>
 		<link href=https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap rel="stylesheet">
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:100,200,300,400,500"/>
 
     <% if ENV['ASSET_HOST'].present? %>
 	    <link rel="preconnect" href="<%= ENV['ASSET_HOST'] %>">
