--- a/app/views/soundcraft/layouts/_footer.html.erb
+++ b/app/views/soundcraft/layouts/_footer.html.erb
@@ -24,7 +24,7 @@
 	        <h4>SUPPORT</h4>
           <%= link_to t('tech_support'), support_path %><br/>
           <%= link_to t('where_to_buy').titleize, where_to_find_path %><br/>
-          <%= link_to t('product_registration').titleize, warranty_registration_path %><br/>
+          <%= link_to t('product_registration').titleize, warranty_registration_path, target: "_blank" %><br/>
           <% if !!(website.forum_link) %>
             <%= link_to t("forum").titleize, website.forum_link %><br/>
           <% end %>
