--- a/app/views/dbx/layouts/_nav_items.html.erb
+++ b/app/views/dbx/layouts/_nav_items.html.erb
@@ -65,7 +65,7 @@
       <li><%= link_to t("nav.downloads"), "/#{I18n.locale}/support_downloads" %></li>
       <li><%= link_to t('warranty').titleize, warranty_path %></li>
       <% if website.has_product_registrations? %>
-        <li><%= link_to t("warranty_registration").titleize, warranty_registration_path %></li>
+        <li><%= link_to t("warranty_registration").titleize, warranty_registration_path, target: "_blank" %></li>
       <% end %>
       <% if !!(website.forum_link) %>
         <li><%= link_to t("forum").titleize, website.forum_link %></li>
