--- a/app/views/martin/layouts/_nav_items.html.erb
+++ b/app/views/martin/layouts/_nav_items.html.erb
@@ -97,7 +97,7 @@
       <li><%= link_to t('downloads').titleize, support_downloads_path %></li>
       <li><%= link_to t('warranty').titleize, warranty_path %></li>
       <% if website.has_product_registrations? %>
-        <li><%= link_to ucfirst(t('warranty_registration')), warranty_registration_path %></li>
+        <li><%= link_to ucfirst(t('warranty_registration')), warranty_registration_path, target: "_blank" %></li>
       <% end %>
     	<% if !!(website.forum_link) %>
         <li class="hide-for-medium"><%= link_to t("forum").titleize, website.forum_link %></li>
