Scheduled Tasks can now operate on Features

--- a/app/views/admin/scheduled_tasks/_form.html.erb
+++ b/app/views/admin/scheduled_tasks/_form.html.erb
@@ -22,7 +22,7 @@
   <div class="row">
     <div class="small-12 medium-6 columns">
       <%= f.input :schedulable_friendly_id,
-        label: "Target Object Friendly ID (use numeric ID for settings)",
+        label: "Target Object Friendly ID (use numeric ID for settings and features)",
         hint: "Paste the Friendly ID here. (what appears in the URL. Something like: \"zbt-4000\")" %>
     </div>
   </div>
